--- a/.htaccess
+++ b/.htaccess
@@ -22,8 +22,8 @@ RewriteRule ^index$ /%1/ [R=301,L]
 #Redirect 301 /old-url  https://www.finzor.com/new-url
 
 # for Blog Page Handling
-RewriteRule ^blogs/([a-zA-Z0-9_-]+)/?$ blogs/blog.php?category=$1 [L,QSA]
-RewriteRule ^blogs/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/?$ blogs/blog.php?category=$1&slug=$2 [L,QSA]
+RewriteRule ^blogs/([a-zA-Z0-9_-]+)/?$ blogs/index.php?category=$1 [L,QSA]
+RewriteRule ^blogs/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/?$ blogs/index.php?category=$1&slug=$2 [L,QSA]
 
 # Custom 404 Error Page Handling
 ErrorDocument 404 /404.php
