env example add

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # This file will go to github and the credentials will be exposed
 # Add here and push this file only if any new variables are added or existing is removed in .env file
 
+#Base_URL Setup
+LOCAL_BASE_URL=https://localhost/finzor-web/
+LIVE_BASE_URL=https://finzor.com/
+
 SMTP_HOST=your-smtpHostname
 SMTP_USER=your-smtpemail@example.com
 SMTP_PASS=your-smtppassword
